--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ header {
   justify-content: space-between;
   max-width: 1440px;
   height: 79px;
-  background-color: var(--main-bg-color)
+  background-color: white
 }
 
 .pics-logo {
